appId: com.fjutribodejuda.championship
---
- stopApp
- launchApp:
    clearState: true
- assertVisible: "Esqueci minha senha"
- tapOn: "Esqueci minha senha"
- assertVisible: "Email"
